--- a/references.bib
+++ b/references.bib
@@ -378,3 +378,12 @@ isbn="978-3-319-17091-6"
   isbn = {978-1292269207},
   pages = {528},
 }
+
+@book{Billingsley1995,
+  author = {Patrick Billingsley},
+  title = {Probability and Measure},
+  edition = {3},
+  year = {1995},
+  publisher = {John Wiley \& Sons},
+  isbn = {0-471-00710-2},
+}
