--- a/main.tex
+++ b/main.tex
@@ -29,6 +29,7 @@
 \DeclareMathOperator*{\argmin}{arg\,min}
 \DeclareMathOperator{\Prob}{P}
 \DeclareMathOperator{\E}{E}
+\DeclareMathOperator{\Var}{V}
 \DeclareMathOperator{\sign}{sign}
 
 \usepackage{cleveref}
