--- a/ethics.tex
+++ b/ethics.tex
@@ -2,3 +2,49 @@
 
 \chapterprecishere{It's a trap!
   \par\raggedleft--- \textup{Admiral Ackbar}, Star Wars Episode VI: Return of the Jedi}
+
+A few comments on the ethical, privacy and legal issues that data scientists should be aware of.
+
+\begin{mainbox}{Chapter remarks}
+
+  \boxsubtitle{Contents}
+
+  \startcontents[chapters]
+  \printcontents[chapters]{}{1}{}
+  \vspace{1em}
+
+  \boxsubtitle{Context}
+
+  \begin{itemize}
+    \item \dots
+  \end{itemize}
+
+  \boxsubtitle{Objectives}
+
+  \begin{itemize}
+    \item \dots
+  \end{itemize}
+
+  \boxsubtitle{Takeways}
+
+  \begin{itemize}
+    \item \dots
+  \end{itemize}
+\end{mainbox}
+
+{}
+\clearpage
+
+\section{Ethical and moral values}
+
+\section{Privacy and data protection}
+
+\subsection{Homomorphic encryption}
+
+\subsection{Federated learning}
+
+\section{Major legal frameworks}
+
+\subsection{General Data Protection Regulation (GDPR)}
+
+\subsection{California Consumer Privacy Act (CCPA)}
