--- a/evaluation.tex
+++ b/evaluation.tex
@@ -26,6 +26,36 @@ $i \in \mathcal{I}_\text{test}$, such that
 where $\theta$ is the solution found by the learning algorithm from the training set, see
 \cref{eq:risk}.
 
+\begin{mainbox}{Chapter remarks}
+
+  \boxsubtitle{Contents}
+
+  \startcontents[chapters]
+  \printcontents[chapters]{}{1}{}
+  \vspace{1em}
+
+  \boxsubtitle{Context}
+
+  \begin{itemize}
+    \item \dots
+  \end{itemize}
+
+  \boxsubtitle{Objectives}
+
+  \begin{itemize}
+    \item \dots
+  \end{itemize}
+
+  \boxsubtitle{Takeways}
+
+  \begin{itemize}
+    \item \dots
+  \end{itemize}
+\end{mainbox}
+
+{}
+\clearpage
+
 \section{Binary classification evaluation}
 
 In order to assess the quality of a binary classification model, we need to know which
