--- a/handling.tex
+++ b/handling.tex
@@ -15,6 +15,36 @@ of the same column share the same properties (i.e. the same type, same restricti
 and each column has a name.  Moreover, we assume that any value is possibly
 \emph{missing}.
 
+\begin{mainbox}{Chapter remarks}
+
+  \boxsubtitle{Contents}
+
+  \startcontents[chapters]
+  \printcontents[chapters]{}{1}{}
+  \vspace{1em}
+
+  \boxsubtitle{Context}
+
+  \begin{itemize}
+    \item \dots
+  \end{itemize}
+
+  \boxsubtitle{Objectives}
+
+  \begin{itemize}
+    \item \dots
+  \end{itemize}
+
+  \boxsubtitle{Takeways}
+
+  \begin{itemize}
+    \item \dots
+  \end{itemize}
+\end{mainbox}
+
+{}
+\clearpage
+
 \section{Data handling operators}
 
 In the literature and in software documentation, you will find a variety of terms used to
