--- a/inductive.tex
+++ b/inductive.tex
@@ -8,6 +8,36 @@
 We can address several kinds of problems using algorithms that learn from data.  However,
 we focus on the problem of \emph{inductive learning}. Before we go further, let us define some terms.
 
+\begin{mainbox}{Chapter remarks}
+
+  \boxsubtitle{Contents}
+
+  \startcontents[chapters]
+  \printcontents[chapters]{}{1}{}
+  \vspace{1em}
+
+  \boxsubtitle{Context}
+
+  \begin{itemize}
+    \item \dots
+  \end{itemize}
+
+  \boxsubtitle{Objectives}
+
+  \begin{itemize}
+    \item \dots
+  \end{itemize}
+
+  \boxsubtitle{Takeways}
+
+  \begin{itemize}
+    \item \dots
+  \end{itemize}
+\end{mainbox}
+
+{}
+\clearpage
+
 \begin{defbox}{Artificial intelligence}{}
   The field that studies algorithms that exhibit intelligent behavior.
 \end{defbox}
