--- a/planning.tex
+++ b/planning.tex
@@ -24,6 +24,36 @@ There is not a single way to plan experiments, but there are some common steps t
 be followed to design a good experimental plan.  In this chapter, we present a
 framework for experimental planning that can be used in most data science projects.
 
+\begin{mainbox}{Chapter remarks}
+
+  \boxsubtitle{Contents}
+
+  \startcontents[chapters]
+  \printcontents[chapters]{}{1}{}
+  \vspace{1em}
+
+  \boxsubtitle{Context}
+
+  \begin{itemize}
+    \item \dots
+  \end{itemize}
+
+  \boxsubtitle{Objectives}
+
+  \begin{itemize}
+    \item \dots
+  \end{itemize}
+
+  \boxsubtitle{Takeways}
+
+  \begin{itemize}
+    \item \dots
+  \end{itemize}
+\end{mainbox}
+
+{}
+\clearpage
+
 \section{Elements of an experimental plan}
 
 There are important elements that should be considered when designing an experimental
