--- a/preliminaries.tex
+++ b/preliminaries.tex
@@ -46,13 +46,8 @@ encourage you to read it carefully, as it will help you understand the rest of t
   \begin{itemize}
     \item Introduce a brief overview of the main computational, mathematical and
       statistical concepts in data science.
+    \item Remind the reader the main definitions and properties of these concepts.
     \item Consolidate notations and definitions that are used throughout the book.
-  \end{itemize}
-
-  \boxsubtitle{Takeways}
-
-  \begin{itemize}
-    \item Computational and mathematical background is essential for data science.
   \end{itemize}
 \end{mainbox}
 
