--- a/project.tex
+++ b/project.tex
@@ -24,6 +24,36 @@ hand''.
 % - Problems and advantages of SCRUM
 % - Our approach
 
+\begin{mainbox}{Chapter remarks}
+
+  \boxsubtitle{Contents}
+
+  \startcontents[chapters]
+  \printcontents[chapters]{}{1}{}
+  \vspace{1em}
+
+  \boxsubtitle{Context}
+
+  \begin{itemize}
+    \item \dots
+  \end{itemize}
+
+  \boxsubtitle{Objectives}
+
+  \begin{itemize}
+    \item \dots
+  \end{itemize}
+
+  \boxsubtitle{Takeways}
+
+  \begin{itemize}
+    \item \dots
+  \end{itemize}
+\end{mainbox}
+
+{}
+\clearpage
+
 \section{CRISP-DM}
 
 CRISP-DM\footnote{Official guide available at
